2019-10-12  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* libbalsa/html.c (lbh_web_view_new): set v-expand on the
	web-view to TRUE, so that HTML mail uses the whole pane.

2019-10-10  Pawel Salek  <pawsa0@gmail.com>

	* NEWS, configure.ac, meson.build: release balsa-2.5.8

2019-10-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	libbalsa-html: Look deeper to find the WebKitWebView

	* libbalsa/html.c (libbalsa_html_new), (lbh_get_web_view_helper),
	(lbh_get_web_view): if the widget is not a WebKitWebView but is
	a GtkContainer, look at all its descendants for a WebKitWebView.

2019-10-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build: we need -Wformat for -Wformat-security to be effective

	* configure.ac:
	* meson.build:

2019-10-01  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Build: GTimeVal, used in GtkSourceView-3, is deprecated in glib
	version 2.62; we will use GtkSourceView-4 if available, which
	doesn't use GTimeVal, or otherwise continue to use GtkSourceView-3
	with -DGLIB_VERSION_MIN_REQUIRED=GLIB_VERSION_2_48 to suppress the
	deprecation warning.

	* configure.ac:
	* meson.build:

2019-09-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	ab-main: Use GMenu API instead of GtkBuilder

	* src/ab-main.c (bab_cleanup), (set_address_book_menu_items),
	(file_delete_activated):
	* ui/ab-main.ui: no need for place-holder

2019-09-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	address-book-config: Do not crash

	* src/address-book-config.c (edit_book_response): destroy the
	dialog as the last step; otherwise the struct is freed before we
	use it.

2019-09-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	mime-widget: subclass GtkBox instead of GObject

	This makes BalsaMimeWidget inherit from GtkBox, so it is
	actually a widget. A subclass that used to create a vertical
	GtkBox can use the BalsaMimeWidget itself. Other subclasses can
	add their custom widget to the BalsaMimeWidget.

	* src/balsa-message.c (bm_find_scroll_to_rectangle),